apps/actual-budget/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: actual-budget-route
  namespace: actual-budget
  annotations:
    argocd.argoproj.io/sync-wave: "0"  
spec:
  parentRefs:
    - name: ingress-gateway
      namespace: cluster-gateway 
      sectionName: actual-budget-https
  hostnames:
    - "actual-budget.hoareau-marion.eu"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: actual-budget
          port: 5006
